--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@remotion/player": "^4.0.0",
     "@remotion/shapes": "^4.0.0",
     "@remotion/tailwind": "^4.0.0",
+    "@remotion/transitions": "4.0.227",
     "clsx": "2.1.1",
     "next": "14.2.13",
     "react": "18.3.1",
